<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cifra_01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/cifra_01"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/cifra_02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cifra_02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/cifra_02"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cifra_01" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="90dp"
        android:text="@string/resultado"
        android:textAlignment="textStart"
        android:textDirection="inherit"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cifra_02" />

    <TableLayout
        android:layout_width="164dp"
        android:layout_height="198dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/suma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sumar"
                android:text="@string/suma" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/resta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="restar"
                android:text="@string/resta" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/multiplicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="multiplicar"
                android:text="@string/multiplicacion" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="dividir"
                android:text="@string/division" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>